Continued writing documentation for the C code.

--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -11,30 +11,21 @@
     "This writes and documents the C code that `GiRaFFE_HO` uses to compute the magnetic fields from the vector potential. This is a relatively straightforward calculation, but requires care to be taken in the ghost zones. \n",
     "These expressions are used to calculate the magnetic fields from the vector potential. \n",
     "\n",
-    "We will also need to compute $B^i$ everywhere in order to evolve $\\tilde{S}_i$. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create header files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints."
+    "We will also need to compute $B^i$ everywhere in order to evolve $\\tilde{S}_i$. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create header files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints.\n",
+    "\n",
+    "We start in the usual way - import the modules we need, set `DIM = 3`, and run the function `gho.GiRaFFE_Higher_Order_v2()` to build equations. We will also import the Levi-Civita symbol from `WeylScalars_Cartesian`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_8.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_6.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_4.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0D.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0U.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1U.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2D.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2U.h\"\n"
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n"
      ]
     }
    ],
@@ -64,8 +55,22 @@
     "        for k in range(DIM):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
     "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
-    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gho.gammadet)\n",
-    "\n",
+    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gho.gammadet)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now create the structures we need: `AD_dD` for $A_{i,j}$ and `BU` for $B^i$. We will also define a quick function `set_BU_to_print()`; this will allow us to quickly rebuild the data structure that we will pass to `fin.FD_outputC()` each time we change `BU`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
     "BU = ixp.zerorank1() # BU is already registered as a gridfunction, but we need to zero its values and declare it in this scope.\n",
     "# We can use this function to compactly reset to expressions to print at each FD order.\n",
@@ -77,12 +82,34 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
-    "\n",
-    "# We'll lower the FD order at each stage and write to a new file.\n",
-    "# But first, we need to save the original order\n",
-    "original_order = par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")\n",
-    "\n",
+    "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can output the header files that will be used to calculate $B^i$ on the interior of the grid and on the non-outermost ghost zones. For each FD order $\\leq 10$, we will set the NRPy+ parameter `FD_CENTDERIVS_ORDER` to that order, then run `fin.FD_outputC()`, taking care to use our new function`set_BU_to_print()` to define *what* we are writing to the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_8.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_6.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_4.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2.h\"\n"
+     ]
+    }
+   ],
+   "source": [
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
     "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_10.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
@@ -96,8 +123,35 @@
     "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_4.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
-    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
-    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2.h\",set_BU_to_print(),params=\"outCverbose=False\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we will write the files that will handle the outermost ghost zones. Each of these ghost zones represents one face of a cube. Since there is no data outside the cube, we will use an up- or downwinded derivative so that we use only interior data. For example, on the +x ghost zone, we will use a downwinded derivative in the x-direction. So, we will need to create a total of six files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2U.h\"\n"
+     ]
+    }
+   ],
+   "source": [
     "# For the outermost points, we'll need a separate file for each face. \n",
     "# These will correspond to an upwinded and a downwinded file for each direction.\n",
     "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
@@ -164,24 +218,29 @@
     "            else:\n",
     "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
-    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
-    "\n",
-    "# And now, we set the FD order back to what it was.\n",
-    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", original_order)"
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we need to do some extra work to fill the ghost zones when we solve for $B^i$ from $A_k$, we will put the functions in their own file to keep things cleaner."
+    "With the header files created to actually calculate $B^i$ from $A_k$, we will write the C code to direct how those are used. We will start by including needed header files. We will then define `REAL` as type `double` (so that we can easily change it everywhere if we want to use a different precision) and the `IDX` macros that we use to access specific points in the gridfunction arrays. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_standalone/driver_AtoB.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_standalone/driver_AtoB.c\n",
     "#include <math.h>\n",
@@ -203,8 +262,31 @@
     "/*const int MAXFACE = -1;\n",
     "*const int NUL     = +0;\n",
     "*const int MINFACE = +1;\n",
-    "*/\n",
-    "\n",
+    "*/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rest of this file will consist of two functions. The first, `AtoB`, will loop over the region specified by `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. At each point therein, it will calculate $B^i$ at the specified order. Note that if `ORDER = 0` is passed to this function, it will instead use second-order derivatives along with up- or downwinded derivatives as appropriate, which is specified by the parameters `FACEX0`, `FACEX1`, and `FACEX2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone/driver_AtoB.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/driver_AtoB.c\n",
     "// Declare boundary condition FACE_UPDATE function,\n",
     "// which fills in the ghost zones with successively\n",
     "// lower order finite differencing\n",
@@ -277,11 +359,35 @@
     "    printf(\"ERROR. ORDER = %d not supported!\\n\",ORDER);\n",
     "    exit(1);\n",
     "  }\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is responsible for driving the logic needed to compute $B^i$ from $A_i$ whenever it is needed in the main code (typically done along with applying BCs after a timestep in the main code). We first calculate the order that we want on the interior of the grid from the parameter `NGHOSTS`. We set the boundaries `imin` and `imax` such that they define the interior of the grid. We also poison the values of $B^i$ by setting them to `NaN` everywhere: this will allow us to immediately tell if something is causing us to skip a point in the rest of the algorithm. \n",
     "\n",
+    "With the preliminaries handled, we call `AtoB` at `ORDER` (which is being used for the rest of the derivatives throughout `GiRaFFE`). Note that `imin` and `imax` are passed such that they define the interior of the grid, and that the `FACEX` parameters are all `NUL` here. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone/driver_AtoB.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/driver_AtoB.c\n",
     "void driver_A_to_B(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3], const REAL dxx[3],const REAL *in_gfs,REAL *aux_gfs) {\n",
     "  \n",
-    "  const int *Nx = Nxx;\n",
     "  int ORDER = NGHOSTS*2;\n",
     "  for(int ii=0;ii<Nxx_plus_2NGHOSTS[2]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[0];ii++) {\n",
     "      aux_gfs[IDX4pt(BU0GF,ii)] = 1.0 / 0.0;\n",
@@ -291,8 +397,34 @@
     "\n",
     "  //printf(\"Starting A to B driver with Order = %d...\\n\",ORDER);\n",
     "  int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
-    "  int imax[3] = { Nx[0]+NGHOSTS, Nx[1]+NGHOSTS, Nx[2]+NGHOSTS };\n",
-    "  AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0],imin[1],imax[1],imin[2],imax[2], NUL,NUL,NUL);\n",
+    "  int imax[3] = { Nxx[0]+NGHOSTS, Nxx[1]+NGHOSTS, Nxx[2]+NGHOSTS };\n",
+    "  AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0],imin[1],imax[1],imin[2],imax[2], NUL,NUL,NUL);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we will handle the ghost zones. We first step down the order the next lower even number. Then, for each face (taking care to match the region specified bythe `imin` and `imax` parameters with the appropriate `FACEX` values), we calculate $B^i$ in the innermost ghostzone. We also decrement `imin` and increment `imax`. This serves two purposes: the next time through the loop, `AtoB` will operate on the next-outer ghost zone, and the size of each face will increase, eventually allowing us to act on each point. \n",
+    "\n",
+    "We then repeat the process for each lower even order until the reach the outermost ghost zone. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone/driver_AtoB.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/driver_AtoB.c\n",
     "  while(ORDER>0) {\n",
     "      // After updating each face, adjust imin[] and imax[] \n",
     "      //   to reflect the newly-updated face extents.\n",
