--- a/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n",
     "\n",
@@ -33,7 +41,23 @@
     "          -1.0*gfs[IDX4(which_gf,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]; \\\n",
     "      }\n",
     "//          +1.0*gfs[IDX4(which_gf,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)]; \\\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n",
     "// Basic Copy boundary conditions\n",
     "#define  FACE_UPDATE_COPY(which_gf, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
     "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\n",
@@ -45,8 +69,23 @@
     "//          ghost zone first, and moving outward.\n",
     "const int MAXFACE = -1;\n",
     "const int NUL     = +0;\n",
-    "const int MINFACE = +1;\n",
-    "\n",
+    "const int MINFACE = +1;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n",
     "// This macro acts differently in that it acts on an entire 3-vector of gfs, instead of 1.\n",
     "// which_gf_0 corresponds to the zeroth component of that vector. The if statements only \n",
     "// evaluate true if the velocity is directed inwards on the face in consideration.\n",
@@ -74,7 +113,23 @@
     "          aux_gfs[IDX4(which_gf_0+2,i0,i1,i2)] = 0.0;                           \\\n",
     "      }                                                                         \\\n",
     "*/\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n",
     "void apply_bcs(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *gfs,REAL *aux_gfs) {\n",
     "    // First, we apply extrapolation boundary conditions to AD\n",
     "#pragma omp parallel for\n",
@@ -134,7 +189,23 @@
     "    }\n",
     "    }*/\n",
     "}\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a GiRaFFE_standalone/GiRaFFE_boundary_conditions.h\n",
     "// A supplement to the boundary conditions for debugging. This will overwrite data with exact conditions\n",
     "void FACE_UPDATE_EXACT(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
     "                       const int n, const REAL dt,REAL *out_gfs,REAL *aux_gfs,\n",
