Tutorial-Start_to_Finish-Curvilinear_BCs-new: continue work on description

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -16,7 +16,16 @@
     "## Introduction: Applying boundary conditions in curvilinear coordinates\n",
     "$$\\label{intro}$$\n",
     "\n",
+    "There are three challenges we face when solving PDEs in curvilinear coordinates:\n",
+    "\n",
+    "1. [Challenge 1](#innerouterbcs): Unlike ordinary Cartesian coordinate grids, not all boundary points on uniform curvilinear coordinate grids are outer boundary points.\n",
+    "1. [Challenge 2](#parity): Tensors and vectors in curvilinear coordinates can change directions across \"inner\" boundaries, changing sign as a result. \n",
+    "1. [Challenge 3](#coordsingularities): Coordinate singularities can appear, causing a stiffening or divergence of terms in PDEs.\n",
+    "\n",
+    "<a id='innerouterbcs'></a>\n",
+    "\n",
     "### Inner versus outer boundary points\n",
+    "$$\\label{innerouterbcs}$$\n",
     "\n",
     "Unlike Cartesian coordinates, the boundaries of our grid in generic curvilinear coordinates are not all outer boundaries. \n",
     "\n",
@@ -38,7 +47,10 @@
     "1. Does a given ghost point map to an interior point, or is it an outer boundary point (i.e., a point exterior to the domain)?\n",
     "1. If the ghost zone point maps to an interior point, to which interior point does it map?\n",
     "\n",
-    "### Dealing with vectors and tensors across inner boundaries\n",
+    "<a id='parity'></a>\n",
+    "\n",
+    "### Parity: changes of direction in vectors and tensors across inner boundaries\n",
+    "$$\\label{parity}$$\n",
     "\n",
     "When applying inner boundary conditions to vectors and tensors, we must consider how the direction or *parity* of vector and tensor components change across the inner boundary.\n",
     "\n",
@@ -49,7 +61,10 @@
     "\\end{align}\n",
     "where $\\mathbf{e}^\\rho\\left(\\rho,\\phi,z\\right)$ is the $\\rho$ unit vector evaluated at point $(\\rho,\\phi,z)$, and $\\mathbf{e}^\\rho\\left(-\\rho,\\phi,z\\right) \\cdot \\mathbf{e}^\\rho\\left(\\rho,\\phi+\\pi,z\\right)$ is the dot product of the two unit vectors, which must evaluate to $\\pm 1$ (i.e., the **parity**). Contrast this with scalars, which do not possess a sense of direction/parity.\n",
     "\n",
+    "<a id='coordsingularities'></a>\n",
+    "\n",
     "### Coordinate singularities\n",
+    "$$\\label{coordsingularities}$$\n",
     "\n",
     "Most non-Cartesian, orthogonal coordinate systems (like spherical coordinates) possess *coordinate singularities*. \n",
     "\n",
@@ -80,13 +95,14 @@
     "\n",
     "This module is organized as follows\n",
     "\n",
-    "1. [Step 0](#basicalgorithm): Overview of boundary condition algorithm in curvilinear coordinates\n",
-    "    1. Addressing Subtlety #1: Distinguishing inner from outer boundary points\n",
-    "    1. Addressing Subtlety #1.a: Applying parity conditions to arbitrary-rank tensors\n",
+    "1. [Step 1](#basicalgorithm): Overview of boundary condition algorithm in curvilinear coordinates\n",
+    "    1. Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
+    "    1. Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
     "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
-    "1. [Step 2](#ccode_bcs): Implement C code for implementation of curvilinear coordinate boundary conditions\n",
-    "    1. [Step 2.a](#subtlety1): Subtlety 1: Distinguishing inner from outer boundary points\n",
-    "    1. [Step 2.b](#subtlety1a): Subtlety 1.a: Applying parity conditions to arbitrary-rank tensors\n",
+    "1. [Step 2](#ccode_bc_struct): Declaring `bc_struct`: Data structure for storing boundary condition information\n",
+    "\n",
+    "    1. [Step 2.a](#challenge1): Challenge 1: Distinguishing inner from outer boundary points\n",
+    "    1. [Step 2.b](#challenge2): Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
     "        1. [Step 2.b.i](#register_gfs): Register gridfunctions of all 10 parity types; output gridfunction aliases to `CurviBoundaryConditions/gridfunction\\_defines.h`\n",
     "        1. [Step 2.b.ii](#assign_parity): Assign the correct basic parity type to each test gridfunction\n",
     "            1. [Step 2.b.ii.1](#parity_digits): Set parity type for each gridfunction, based on the digits at the end of its name\n",
