--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "Here we review the basic algorithm for addressing Subtleties #1 and #1.a discussed in the [Introduction](#intro) above. \n",
     "\n",
-    "## Addressing Subtlety #1: Distinguishing inner from outer boundary points\n",
+    "## Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
     "\n",
     "At each ghost zone grid point $\\mathbf{d}_{\\rm gz}=(x_0,x_1,x_2)$, we will do the following:\n",
     "\n",
@@ -153,7 +153,7 @@
     "Following the prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658), we will implement curvilinear boundary conditions for rank-0, rank-1, and symmetric rank-2 tensors in three dimensions; as this is the same dimension and highest rank needed for BSSN.\n",
     "\n",
     "\n",
-    "## Addressing Subtlety #1.a: Applying parity conditions to arbitrary-rank tensors\n",
+    "## Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
     "\n",
     "Above we presented the strategy for applying parity boundary conditions to a single component of a vector. Here we outline the generic algorithm for arbitrary-rank tensors.\n",
     "\n",
