Tutorial-Start_to_Finish-Curvilinear_BCs-new: continue work on reorganizing and consolidating

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "<a id='innerouterbcs'></a>\n",
     "\n",
-    "### Inner versus outer boundary points\n",
+    "### Challenge 1: Inner versus outer boundary points\n",
     "$$\\label{innerouterbcs}$$\n",
     "\n",
     "Unlike Cartesian coordinates, the boundaries of our grid in generic curvilinear coordinates are not all outer boundaries. \n",
@@ -49,7 +49,7 @@
     "\n",
     "<a id='parity'></a>\n",
     "\n",
-    "### Parity: changes of direction in vectors and tensors across inner boundaries\n",
+    "### Challenge 2: Parity: changes of direction in vectors and tensors across inner boundaries\n",
     "$$\\label{parity}$$\n",
     "\n",
     "When applying inner boundary conditions to vectors and tensors, we must consider how the direction or *parity* of vector and tensor components change across the inner boundary.\n",
@@ -63,7 +63,7 @@
     "\n",
     "<a id='coordsingularities'></a>\n",
     "\n",
-    "### Coordinate singularities\n",
+    "### Challenge 3: Coordinate singularities\n",
     "$$\\label{coordsingularities}$$\n",
     "\n",
     "Most non-Cartesian, orthogonal coordinate systems (like spherical coordinates) possess *coordinate singularities*. \n",
@@ -79,9 +79,41 @@
     "+ $\\theta_{\\rm i1} = \\theta_{\\rm min} + \\left({\\rm i1} + \\frac{1}{2}\\right)\\Delta \\theta$, where $\\theta_{\\rm min}= \\left(-3+\\frac{1}{2}\\right)\\Delta \\theta$; and\n",
     "+ $\\phi_{\\rm i2}   = \\phi_{\\rm min}   + \\left({\\rm i2} + \\frac{1}{2}\\right)\\Delta \\phi$, where $\\phi_{\\rm min}=-\\pi+ \\left(-3+\\frac{1}{2}\\right)\\Delta \\phi$.\n",
     "\n",
+    "**Exercise to student**: Given the prescription above, why do the integers $\\left(\\rm{i0},\\rm{i1},\\rm{i2}\\right)$ need to be even?\n",
+    "\n",
     "As Laplacians like these appear on the right-hand sides of, e.g., the scalar wave equation in curvilinear coordinates, we still have a problem of some terms becoming quite large as the coordinate singularity is approached. This issue manifests as a stiffening of the PDE, requiring that we be very careful about the precise [Method of Lines](Tutorial-Method_of_Lines-C_Code_Generation.ipynb) timestepping algorithm used. See [Cordero-Carrión & Cerdá-Durán](https://arxiv.org/abs/1211.5930) for information on dealing with this subtlety in a second-order Runge-Kutta Method of Lines context; it was later found that the standard RK4 method maintain stable solutions to PDEs affected by this sort of stiffening.\n",
     "\n",
-    "**Exercise to student: Given the prescription above, why do the integers $\\left(\\rm{i0},\\rm{i1},\\rm{i2}\\right)$ need to be even?**"
+    "The above discussion focuses primarily on scalar fields. However, when solving PDEs involving vectors and tensors, the vectors and tensors themselves can exhibit divergent behavior at coordinate singularities. The good news is, this singular behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
+    "\n",
+    "For example, given a smooth vector *in a 3D Cartesian basis* $\\bar{\\Lambda}^{i}$, all components $\\bar{\\Lambda}^{x}$, $\\bar{\\Lambda}^{y}$, and $\\bar{\\Lambda}^{z}$ will be smooth (by assumption). When changing the basis to spherical coordinates (applying the appropriate Jacobian matrix transformation), we will find that since $\\phi = \\arctan(y/x)$, $\\bar{\\Lambda}^{\\phi}$ is given by\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\bar{\\Lambda}^{\\phi} &= \\frac{\\partial \\phi}{\\partial x} \\bar{\\Lambda}^{x} + \n",
+    "\\frac{\\partial \\phi}{\\partial y} \\bar{\\Lambda}^{y} + \n",
+    "\\frac{\\partial \\phi}{\\partial z} \\bar{\\Lambda}^{z} \\\\\n",
+    "&= -\\frac{y}{\\sqrt{x^2+y^2}} \\bar{\\Lambda}^{x} + \n",
+    "\\frac{x}{\\sqrt{x^2+y^2}} \\bar{\\Lambda}^{y} \\\\\n",
+    "&= -\\frac{y}{r \\sin\\theta} \\bar{\\Lambda}^{x} + \n",
+    "\\frac{x}{r \\sin\\theta} \\bar{\\Lambda}^{y}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus $\\bar{\\Lambda}^{\\phi}$ diverges at all points where $r\\sin\\theta=0$ due to the $\\frac{1}{r\\sin\\theta}$ that appear in the Jacobian transformation. \n",
+    "\n",
+    "This divergence might pose no problem on cell-centered grids that avoid $r \\sin\\theta=0$, except that the BSSN equations require that *first and second derivatives* of these quantities be taken. Usual strategies for numerical approximation of these derivatives (e.g., finite difference methods) will \"see\" these divergences and errors generally will not drop to zero with increased numerical sampling of the functions at points near where the functions diverge.\n",
+    "\n",
+    "However, notice that if we define $\\lambda^{\\phi}$ such that\n",
+    "\n",
+    "$$\\bar{\\Lambda}^{\\phi} = \\frac{1}{r\\sin\\theta} \\lambda^{\\phi},$$\n",
+    "\n",
+    "then $\\lambda^{\\phi}$ will be smooth as well. \n",
+    "\n",
+    "Avoiding such singularities can be generalized to arbitrary coordinate systems, so long as $\\lambda^i$ is defined as:\n",
+    "\n",
+    "$$\\bar{\\Lambda}^{i} = \\frac{\\lambda^i}{\\text{scalefactor[i]}} ,$$\n",
+    "\n",
+    "where scalefactor\\[i\\] is the $i$th scale factor in the given coordinate system. This idea can be extended to covariant (lowered-index) vectors and arbitrary tensors, as described in [the BSSN quantities tutorial module](Tutorial-BSSN_quantities.ipynb#rescaling_tensors).\n",
+    "\n",
+    "**In summary, Challenge 3 is addressed via a combination of cell-centered grids, tensor rescaling, and a stable Method of Lines time stepping algorithm. This tutorial module will therefore focus on addressing Challenges 1 and 2, which, coincidentally, are addressed via an appropriate boundary condition algorithm.**"
    ]
   },
   {
@@ -96,12 +128,12 @@
     "This module is organized as follows\n",
     "\n",
     "1. [Step 1](#basicalgorithm): Overview of boundary condition algorithm in curvilinear coordinates\n",
-    "    1. Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
-    "    1. Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
+    "    1. [Step 1.a](#challenge1): Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
+    "    1. [Step 1.b](#challenge2): Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
     "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
     "1. [Step 2](#ccode_bc_struct): Declaring `bc_struct`: Data structure for storing boundary condition information\n",
-    "\n",
-    "    1. [Step 2.a](#challenge1): Challenge 1: Distinguishing inner from outer boundary points\n",
+    "1. [Step 3](#ccode_basicalg): Basic algorithm.\n",
+    "1. [Step 2.a](#challenge1): Challenge 1: Distinguishing inner from outer boundary points\n",
     "    1. [Step 2.b](#challenge2): Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
     "        1. [Step 2.b.i](#register_gfs): Register gridfunctions of all 10 parity types; output gridfunction aliases to `CurviBoundaryConditions/gridfunction\\_defines.h`\n",
     "        1. [Step 2.b.ii](#assign_parity): Assign the correct basic parity type to each test gridfunction\n",
@@ -111,26 +143,30 @@
     "1. [Step 3](#validate): Set up test data for Curvilinear Boundary Conditions code validation\n",
     "1. [Step 4](#mainc): `CurviBC_Playground.c` : The Main C Code\n",
     "1. [Step 5](#senr_compare): Validation: Compare with original SENR results\n",
-    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file\n",
-    "        \n",
-    "    "
+    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview of boundary condition algorithm in curvilinear coordinates\n",
+    "<a id='basicalgorithm'></a>\n",
+    "\n",
+    "# Overview of boundary condition algorithm in curvilinear coordinates \\[Back to [top](#toc)\\]\n",
+    "$$\\label{basicalgorithm}$$\n",
     "\n",
     "Here we review the basic algorithm for addressing Subtleties #1 and #1.a discussed in the [Introduction](#intro) above. \n",
     "\n",
-    "## Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
+    "<a id='challenge1'></a>\n",
+    "\n",
+    "## Addressing Challenge 1: Distinguishing inner from outer boundary points \\[Back to [top](#toc)\\]\n",
+    "$$\\label{challenge1}$$\n",
     "\n",
     "At each ghost zone grid point $\\mathbf{d}_{\\rm gz}=(x_0,x_1,x_2)$, we will do the following:\n",
     "\n",
     "1. Evaluate the Cartesian coordinate $\\left(x(x_0,x_1,x_2),y(x_0,x_1,x_2),z(x_0,x_1,x_2)\\right)$, corresponding to this grid point. Then evaluate the inverse $\\mathbf{d}_{\\rm new}=\\left(x_0(x,y,z),x_1(x,y,z),x_2(x,y,z)\\right)$. \n",
     "    1. If $\\mathbf{d}_{\\rm new} \\ne \\mathbf{d}_{\\rm gz}$, then the ghost zone grid point maps to a point in the grid interior, *which is exactly the case described in the above section*. To distinguish this case from an \"outer boundary condition\", we shall henceforth refer to it variously as an application of an \"interior\", \"inner\", or \"parity\" boundary condition.\n",
-    "    1. If $\\mathbf{d}_{\\rm new} \\equiv \\mathbf{d}_{\\rm gz}$, then the ghost zone grid point is on the outer boundary of the grid, and standard outer boundary conditions should be applied.\n",
+    "    1. Ghost zone points for which $\\mathbf{d}_{\\rm new} \\equiv \\mathbf{d}_{\\rm gz}$ are on the outer boundary of the grid, and standard outer boundary conditions should be applied.\n",
     "\n",
     "In detail, the algorithm is as follows:\n",
     "\n",
@@ -152,8 +188,10 @@
     "\n",
     "Following the prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658), we will implement curvilinear boundary conditions for rank-0, rank-1, and symmetric rank-2 tensors in three dimensions; as this is the same dimension and highest rank needed for BSSN.\n",
     "\n",
+    "<a id='challenge2'></a>\n",
     "\n",
-    "## Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors\n",
+    "## Addressing Challenge 2: Applying parity conditions to arbitrary-rank tensors \\[Back to [top](#toc)\\]\n",
+    "$$\\label{challenge2}$$\n",
     "\n",
     "Above we presented the strategy for applying parity boundary conditions to a single component of a vector. Here we outline the generic algorithm for arbitrary-rank tensors.\n",
     "\n",
